--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
 #map {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  border-radius: 10px;
 }
 .map-container {
   height: 500px;
@@ -32,4 +34,21 @@ body {
   line-height: 30px;
   padding-left: 5px;
   padding-right: 5px;
+}
+.side-panel-container {
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  background-color: white;
+  box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
+  padding-top: 15px;
+}
+.cases-table-container h4,
+.chart-container h4 {
+  color: #6a5d5d;
+  font-weight: 400;
+}
+
+.country-data .table td {
+  padding: 0.5rem;
+  border: none;
 }
