--- a/style.css
+++ b/style.css
@@ -1,17 +1,14 @@
 body {
-  font-family: "Lato", sans-serif;
+  margin: 0;
 }
-.main {
-  height: 100vh;
+
+#nav {
+  height: 50px;
 }
+
 #map {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  border-radius: 10px;
-}
-.map-container {
-  height: 500px;
 }
 .map-control {
   background-color: #fff;
@@ -35,25 +32,54 @@ body {
   padding-left: 5px;
   padding-right: 5px;
 }
-.side-panel-container {
-  border-bottom-left-radius: 30px;
-  border-top-left-radius: 30px;
-  background-color: white;
-  box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
-  padding-top: 15px;
-  height: 700px;
-}
-.cases-table-container h4,
-.chart-container h4 {
-  color: #6a5d5d;
-  font-weight: 400;
+.chart-data {
+  width: 30%;
+  margin-left: 30px;
+  margin-top: 20px;
 }
 
-.country-data .table td {
-  padding: 0.5rem;
-  border: none;
+.map-info {
+  background-color: bisque;
+  height: 400px;
 }
-.cases-table-container {
-  height: 50%;
+
+.data-info {
+  height: 700px;
+  display: flex;
+  justify-content: center;
+}
+
+.country-data {
+  margin-top: 20px;
   overflow: scroll;
+  height: 400px;
+}
+
+.info-flag img {
+  width: 100px;
+  border-radius: 5px;
+}
+
+.info-name {
+  font-size: 20px;
+  font-weight: bold;
+  color: #555;
+}
+
+.info-container {
+  width: 150px;
+}
+
+.info-flag {
+  height: 80px;
+  width: 100%;
+  background-size: cover;
+  border-radius: 8px;
+}
+
+.info-confirmed,
+.info-recovered,
+.info-deaths {
+  font-size: 16px;
+  margin-top: 5px;
 }
