--- a/new-style.css
+++ b/new-style.css
@@ -140,6 +140,38 @@ body {
 .deaths .tab-selection {
   background-color: #fa5575;
 }
-.main-info {
+
+.newsfeed-container {
   height: 500px;
+  overflow: scroll;
+}
+/* .newsfeed {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+ */
+.newsfeed-container .card {
+  height: 100%;
+
+  border-radius: 10px;
+  /* overflow: hidden; */
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+/* .newsfeed-container .card-title {
+  height: 90px;
+} */
+.btn-read {
+  position: relative;
+  border: 1px solid #8fe239;
+  background-color: #8fe239;
+  padding: 10px 20px;
+  border-radius: 40px;
+  /* margin: 20px auto 0; */
+  bottom: 10px;
+}
+.newsfeed-container p {
+  height: 75px;
+  overflow: hidden;
 }
