--- a/new-style.css
+++ b/new-style.css
@@ -142,7 +142,7 @@ body {
 }
 
 .newsfeed-container {
-  height: 500px;
+  height: 450px;
   overflow: scroll;
 }
 /* .newsfeed {
@@ -154,24 +154,43 @@ body {
 .newsfeed-container .card {
   height: 100%;
 
-  border-radius: 10px;
-  /* overflow: hidden; */
+  border-radius: 20px;
+  overflow: hidden;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
-  transition: 0.5s;
+  transition: 0.3s;
+}
+.newsfeed-container:hover .card {
+  filter: blur(5px);
+  transform: scale(0.85);
+  opacity: 0.7;
+}
+.newsfeed-container .card:hover {
+  filter: blur(0px);
+  transform: scale(1.05);
+  opacity: 1;
 }
 /* .newsfeed-container .card-title {
   height: 90px;
 } */
 .btn-read {
   position: relative;
-  border: 1px solid #8fe239;
-  background-color: #8fe239;
-  padding: 10px 20px;
+  border: 1px solid #87e622;
+  background-color: #87e622;
+  color: #146811;
+  /* padding: 10px 20px; */
   border-radius: 40px;
   /* margin: 20px auto 0; */
   bottom: 10px;
 }
+.btn-read:hover {
+  background-color: #73ca15;
+}
 .newsfeed-container p {
   height: 75px;
   overflow: hidden;
+}
+/* .healthsafety-container .image-container {
+} */
+.main-info h4 {
+  font-weight: 400;
 }
